manifests/deploy-dev.yaml
# 创建命名空间 datacenter
apiVersion: v1
kind: Namespace
metadata:
  name: datacenter
---
# 创建 Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: datacenter-service
  namespace: datacenter
  labels:
    app: datacenter-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: datacenter-service
  template:
    metadata:
      labels:
        app: datacenter-service
    spec:
      dnsPolicy: ClusterFirst
      imagePullSecrets:
        - name: aliyun-docker-secret
      containers:
        - name: datacenter-service
          image: ${SERVICE_IMAGE}
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health/liveness
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 70
            periodSeconds: 70
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 1
            httpGet:
              path: /actuator/health/readiness
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: config
              mountPath: /application.yaml
              subPath: application.yaml
      volumes:
        - name: config
          configMap:
            name: datacenter-service-config
            items:
              - key: application.yaml
                path: application.yaml
---
# 创建服务
apiVersion: v1
kind: Service
metadata:
  name: datacenter-service
  namespace: datacenter
  labels:
    app: datacenter-service
spec:
  ports:
    - port: 80
      targetPort: 8080
      name: http
  selector:
    app: datacenter-service
  type: ClusterIP
---
# 创建 Ingress
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: datacenter-service
  namespace: datacenter
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.json-schema.cloud
      secretName: json-schema-cloud-tls
  rules:
    - host: api.json-schema.cloud
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              serviceName: datacenter-service
              servicePort: 80
    - host: api.datacenter.wgv
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              serviceName: datacenter-service
              servicePort: 80
